# rainmaker

./: .gitignore  Cargo.toml  README.md  addresses.txt.example  foundry.toml
distribution/: .gitignore  Cargo.toml  config.yml
distribution/src/: lib.rs  prelude.rs
distribution/src/builders/: mod.rs  native.rs  nft.rs  swapper.rs
distribution/src/distributors/: continuous.rs  finite.rs  mod.rs
script/: Soulbound.s.sol  StrictCounter.s.sol  Swapper.s.sol
src/: Soulbound.sol  StrictCounter.sol  Swapper.sol
test/: Swapper.t.sol
